--- a/Mini-projet/Weather-Bluedot/team-2/trunk/weather_bluedot/ihm.ui
+++ b/Mini-projet/Weather-Bluedot/team-2/trunk/weather_bluedot/ihm.ui
@@ -13,11 +13,11 @@
   <property name="windowTitle">
    <string>IHM</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_9">
    <item>
     <widget class="QTabWidget" name="technicien_2">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="mesures">
       <attribute name="title">
@@ -155,6 +155,63 @@
           </widget>
          </item>
         </layout>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="leds">
+      <attribute name="title">
+       <string>Page</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Changement de la couleur de la LED</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="Line" name="line">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <item>
+          <widget class="QPushButton" name="pushbutton_rouge">
+           <property name="text">
+            <string>Rouge</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_vert">
+           <property name="text">
+            <string>Vert</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_orange">
+           <property name="text">
+            <string>Orange</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_eteindre">
+         <property name="text">
+          <string>Eteindre</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
