Doxygen, led actuel

--- a/Mini-projet/Weather-Bluedot/team-2/trunk/weather_bluedot/ihm.ui
+++ b/Mini-projet/Weather-Bluedot/team-2/trunk/weather_bluedot/ihm.ui
@@ -16,7 +16,7 @@
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_8">
+  <layout class="QVBoxLayout" name="verticalLayout_7">
    <item>
     <widget class="QTabWidget" name="technicien_2">
      <property name="font">
@@ -25,7 +25,7 @@
       </font>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="mesures">
       <attribute name="title">
@@ -64,7 +64,7 @@
          <item>
           <widget class="QLabel" name="temperatureRessentie">
            <property name="text">
-            <string>Température ressentie</string>
+            <string>Ressentie</string>
            </property>
           </widget>
          </item>
@@ -191,9 +191,74 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_12">
+           <item>
+            <widget class="QLabel" name="texteEtatLed">
+             <property name="maximumSize">
+              <size>
+               <width>120</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>La LED est actuellement </string>
+             </property>
+             <property name="textFormat">
+              <enum>Qt::AutoText</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="etatLED">
+             <property name="maximumSize">
+              <size>
+               <width>40</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>éteinte</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="texteCouleurLED">
+             <property name="maximumSize">
+              <size>
+               <width>85</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="couleurLED">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
           <widget class="QLabel" name="label">
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
+           <property name="midLineWidth">
+            <number>0</number>
+           </property>
            <property name="text">
             <string>Changement de la couleur de la LED</string>
+           </property>
+           <property name="textFormat">
+            <enum>Qt::PlainText</enum>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
@@ -242,8 +307,25 @@
      </widget>
      <widget class="QWidget" name="technicien">
       <attribute name="title">
-       <string>Mode Technicien</string>
+       <string>Technicien</string>
       </attribute>
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_8">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_11">
+           <item>
+            <widget class="QTextEdit" name="affichageTrame">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
      </widget>
      <widget class="QWidget" name="configuration">
       <attribute name="title">
