--- a/Projet/beehoneyt/ihm.ui
+++ b/Projet/beehoneyt/ihm.ui
@@ -73,6 +73,12 @@
               <property name="text">
                <string/>
               </property>
+              <property name="iconSize">
+               <size>
+                <width>50</width>
+                <height>50</height>
+               </size>
+              </property>
              </widget>
             </item>
             <item>
@@ -224,7 +230,7 @@
              <item>
               <widget class="QPushButton" name="pushButton_reglage">
                <property name="text">
-                <string>Réglages</string>
+                <string>Réglages de la ruche</string>
                </property>
               </widget>
              </item>
