--- a/Projet/bee-honey-t/trunk/beehoneyt-desktop/ihm.ui
+++ b/Projet/bee-honey-t/trunk/beehoneyt-desktop/ihm.ui
@@ -22,7 +22,14 @@
      <widget class="QWidget" name="widget" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
+        <layout class="QVBoxLayout" name="verticalLayout_6">
+         <item>
+          <widget class="Line" name="line">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+          </widget>
+         </item>
          <item>
           <widget class="QWidget" name="barre_laterale" native="true">
            <layout class="QVBoxLayout" name="verticalLayout">
@@ -186,13 +193,6 @@
            <zorder>pushButton_alertes</zorder>
           </widget>
          </item>
-         <item>
-          <widget class="Line" name="line">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-          </widget>
-         </item>
         </layout>
        </item>
        <item>
@@ -244,139 +244,68 @@
             </layout>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_6">
-             <item>
-              <widget class="QChartView" name="chartView_baton_temperature_interieure"/>
-             </item>
-             <item>
-              <widget class="QChartView" name="chartView_baton_temperature_exterieure"/>
-             </item>
-             <item>
-              <layout class="QVBoxLayout" name="informations_supp">
-               <property name="leftMargin">
-                <number>0</number>
-               </property>
+            <layout class="QGridLayout" name="gridLayout_2">
+             <item row="0" column="0">
+              <layout class="QHBoxLayout" name="horizontalLayout_6">
                <item>
-                <widget class="QLabel" name="label_4">
-                 <property name="minimumSize">
-                  <size>
-                   <width>150</width>
-                   <height>0</height>
-                  </size>
-                 </property>
-                 <property name="text">
-                  <string>Humidité</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_7">
+                <layout class="QVBoxLayout" name="verticalLayout_7">
                  <item>
-                  <widget class="QLCDNumber" name="lcdNumber">
-                   <property name="minimumSize">
+                  <widget class="QLabel" name="label_4">
+                   <property name="maximumSize">
                     <size>
-                     <width>90</width>
-                     <height>0</height>
+                     <width>1677215</width>
+                     <height>16777215</height>
                     </size>
+                   </property>
+                   <property name="text">
+                    <string>Température intérieure</string>
+                   </property>
+                   <property name="alignment">
+                    <set>Qt::AlignCenter</set>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QLabel" name="label_5">
-                   <property name="text">
-                    <string>%</string>
-                   </property>
-                  </widget>
+                  <widget class="QLCDNumber" name="lcdNumber"/>
                  </item>
                 </layout>
                </item>
                <item>
-                <spacer name="verticalSpacer">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
+                <widget class="QLabel" name="label_2">
+                 <property name="font">
+                  <font>
+                   <pointsize>34</pointsize>
+                  </font>
                  </property>
-                 <property name="sizeType">
-                  <enum>QSizePolicy::Minimum</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item>
-                <widget class="QLabel" name="label_luminosite_2">
                  <property name="text">
-                  <string>Luminosité</string>
+                  <string>°C</string>
                  </property>
                 </widget>
                </item>
+              </layout>
+             </item>
+             <item row="0" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_7">
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_8">
-                 <item>
-                  <widget class="QLCDNumber" name="lcdNumber_2">
-                   <property name="minimumSize">
-                    <size>
-                     <width>90</width>
-                     <height>0</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
+                <layout class="QVBoxLayout" name="verticalLayout_8">
                  <item>
                   <widget class="QLabel" name="label_6">
                    <property name="text">
-                    <string>lux</string>
+                    <string>TextLabel</string>
                    </property>
                   </widget>
+                 </item>
+                 <item>
+                  <widget class="QLCDNumber" name="lcdNumber_2"/>
                  </item>
                 </layout>
                </item>
                <item>
-                <spacer name="verticalSpacer_2">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
-                 </property>
-                 <property name="sizeType">
-                  <enum>QSizePolicy::Minimum</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item>
-                <widget class="QLabel" name="label_7">
+                <widget class="QLabel" name="label_5">
                  <property name="text">
-                  <string>Poids</string>
+                  <string>TextLabel</string>
                  </property>
                 </widget>
-               </item>
-               <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_9">
-                 <item>
-                  <widget class="QLCDNumber" name="lcdNumber_3">
-                   <property name="minimumSize">
-                    <size>
-                     <width>90</width>
-                     <height>0</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QLabel" name="label_8">
-                   <property name="text">
-                    <string>Kg</string>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
                </item>
               </layout>
              </item>
@@ -385,19 +314,80 @@
           </layout>
          </widget>
          <widget class="QWidget" name="page_2">
-          <widget class="QLabel" name="label_2">
-           <property name="geometry">
-            <rect>
-             <x>10</x>
-             <y>10</y>
-             <width>67</width>
-             <height>17</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>Page 2</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <layout class="QVBoxLayout" name="verticalLayout_2">
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_15">
+               <item>
+                <widget class="QComboBox" name="comboBox_donnees_affiche">
+                 <property name="editable">
+                  <bool>false</bool>
+                 </property>
+                 <property name="currentText">
+                  <string/>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer name="horizontalSpacer_2">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeType">
+                  <enum>QSizePolicy::Fixed</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>800</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item>
+                <widget class="QPushButton" name="pushButton_rafraichir">
+                 <property name="text">
+                  <string>Rafraichir</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QGridLayout" name="gridLayout">
+               <item row="1" column="1">
+                <widget class="QChartView" name="graphicsView_5"/>
+               </item>
+               <item row="0" column="2">
+                <widget class="QChartView" name="graphicsView_7"/>
+               </item>
+               <item row="1" column="2">
+                <widget class="QChartView" name="graphicsView_8"/>
+               </item>
+               <item row="0" column="1">
+                <widget class="QChartView" name="graphicsView_4"/>
+               </item>
+               <item row="0" column="0">
+                <widget class="QChartView" name="graphicsView"/>
+               </item>
+               <item row="1" column="0">
+                <widget class="QChartView" name="graphicsView_2"/>
+               </item>
+               <item row="2" column="1">
+                <widget class="QChartView" name="graphicsView_6"/>
+               </item>
+               <item row="2" column="0">
+                <widget class="QChartView" name="graphicsView_3"/>
+               </item>
+               <item row="2" column="2">
+                <widget class="QChartView" name="graphicsView_9"/>
+               </item>
+              </layout>
+             </item>
+            </layout>
+           </item>
+          </layout>
          </widget>
          <widget class="QWidget" name="page_3">
           <widget class="QLabel" name="label_3">
